--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "deploy": "echo 'Deploying to production...'",
     "deploy:test": "echo 'Deploying test stack...'",
     "teardown:test": "echo 'Removing test stage...'",
-    "teardown:prod": "npx sls remove"
+    "teardown:prod": "npx sls remove",
+    "lint": "npx eslint './src/**/*.ts' --quiet --fix && npx prettier ./src --check"
   },
   "devDependencies": {
     "@asyncapi/generator": "1",
