--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "@mhlabs/cfn-diagram": "1",
     "@types/aws-lambda": "8",
     "@types/node": "latest",
-    "@types/node-fetch": "^2.6.2",
-    "@types/uuid": "^8.3.4",
+    "@types/node-fetch": "2",
+    "@types/uuid": "8",
     "@typescript-eslint/eslint-plugin": "5",
     "@typescript-eslint/parser": "5",
-    "c8": "^7.12.0",
+    "c8": "7",
     "cloc": "2",
     "eslint": "8",
     "eslint-config-prettier": "8",
@@ -43,13 +43,13 @@
     "ts-loader": "latest",
     "ts-node": "10",
     "tslib": "latest",
-    "typedoc": "^0.23.5",
+    "typedoc": "^0.23.16",
     "typescript": "4",
     "webpack": "5",
     "webpack-cli": "latest"
   },
   "dependencies": {
-    "@aws-sdk/client-eventbridge": "^3.121.0",
-    "node-fetch": "^2.6.7"
+    "@aws-sdk/client-eventbridge": "3",
+    "node-fetch": "2"
   }
 }
