--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -143,7 +143,7 @@ jobs:
   ###########
 
   deploy-test:
-    needs: [build, alex, gitleaks, licenses, spectral, trivy, checkov, infracost]
+    needs: [build, alex, gitleaks, licenses, spectral, trivy, checkov] # infracost
     runs-on: ubuntu-latest
     name: Deploy to test
     steps:
