--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,11 @@ jobs:
       uses: brown-ccv/alex-recommends@v1.2.1
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        glob_pattern: "**/*.md"
+        message_id: 'alex'
+        no_binary: false
+        profanity_sureness: 2
+        pr_only: false
+        glob_pattern: "*.md"
 
   gitleaks:
     needs: [build]
