--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,22 +59,22 @@ jobs:
         with:
           file_glob: 'api/*.json'
 
-  trivy:
-    needs: [build]
-    runs-on: ubuntu-latest
-    name: Trivy vulnerability scanner
-    steps:
-      - uses: actions/checkout@v3
-      - uses: aquasecurity/trivy-action@master
-        with:
-          scan-type: 'fs'
-          format: 'sarif'
-          output: 'trivy-results.sarif'
-          severity: 'CRITICAL'
-      - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          sarif_file: 'trivy-results.sarif'
+  #trivy:
+  #  needs: [build]
+  #  runs-on: ubuntu-latest
+  #  name: Trivy vulnerability scanner
+  #  steps:
+  #    - uses: actions/checkout@v3
+  #    - uses: aquasecurity/trivy-action@master
+  #      with:
+  #        scan-type: 'fs'
+  #        format: 'sarif'
+  #        output: 'trivy-results.sarif'
+  #        severity: 'CRITICAL'
+  #    - name: Upload Trivy scan results to GitHub Security tab
+  #      uses: github/codeql-action/upload-sarif@v2
+  #      with:
+  #        sarif_file: 'trivy-results.sarif'
 
   checkov:
     needs: [build]
@@ -96,7 +96,7 @@ jobs:
   ###########
 
   deploy-test:
-    needs: [build, gitleaks, licenses, spectral, trivy, checkov] # alex, infracost
+    needs: [build, gitleaks, licenses, spectral, checkov] # trivy
     runs-on: ubuntu-latest
     name: Deploy to test
     steps:
