--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-on: [push]
+#on: [push]
 
 # TODO: TripleCheck + DocFX + canary
 # TODO: Fix permissions
@@ -152,8 +152,8 @@ jobs:
   #    - name: dorametrix
   #      uses: mikaelvesavuori/dorametrix-action@v1.0.0
   #      with:
-  #        endpoint: ${{ secrets.DORAMETRIX_ENDPOINT }}
   #        api-key: ${{ secrets.DORAMETRIX_API_KEY }}
+  #        endpoint: ${{ secrets.DORAMETRIX_ENDPOINT }}
 
   ############
   # DOCUMENT #
