--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Publish docs
         uses: mikaelvesavuori/documentarian-action@v1.0.1
         with:
-          #schema_path: api/asyncapi.json
+          schema_path: api/asyncapi.json
           #catalogist_endpoint: ${{ secrets.CATALOGIST_ENDPOINT }}
           #catalogist_api_key: ${{ secrets.CATALOGIST_API_KEY }}
           #cloudflare_account_id: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
