--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -29,4 +29,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: SBOM
-          path: docs/reports/sbom.txt
+          path: docs/sbom.txt
